# social-engager

./: .funcignore  .gitignore  README.md  env.example  function_app.py  host.json  local.settings.json.example  pyproject.toml  requirements.txt
.github/workflows/: daily_tweet.yml
src/social_engager/: __init__.py  __main__.py  cli.py  graph.py  prompts.py  utils.py
src/social_engager/agents/: __init__.py  research_agent.py  trend_discovery.py  tweet_generator.py
src/social_engager/guardrails/: __init__.py  content_validator.py  keyword_filter.py  moderation.py
src/social_engager/states/: __init__.py  discovery_state.py  research_state.py  tweet_state.py  workflow_state.py
src/social_engager/tools/: __init__.py  tavily_search.py  think_tool.py  x_poster.py
